--- a/index.html
+++ b/index.html
@@ -199,15 +199,11 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> (16/04/2024) Our work on Dynamic Graph Transformers for Bot Detection is accepted by IJCAI 2024. </span></p>
+
+<p><span class="style11"> (08/12/2023) Our work on Recovering from Poisoning Attacks is accepted by ICDE 2024. </span></p>
+
 <p><span class="style11"> (29/08/2023) Our work on IoT streaming management is accepted by IEEE Trans. on Services Computing. </span></p>
-
-<p><span class="style11"> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
-
-<p><span class="style11"> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
-
-<p><span class="style11"> (21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
-
-<p><span class="style11"> (25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
 
 <p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
@@ -231,9 +227,9 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 2,400+ citations, h-index=23, by Feb. 2024), 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~2,600 citations, h-index=24, by April. 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
-	VLDB, ICDE, WWW, SC, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
+	VLDB, ICDE, WWW, SC, ICDCS, DSN, SoCC, SECON, IJCAI, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
@@ -246,7 +242,7 @@ p{ margin:10px auto}
 	including IJCAI, ECAI, AAAI, CLOUD, etc., I was also the program/area chair of multiple conferences. 
 </span>
 
-<p><span class="style11"> My official bio in Chinese maintained by Beihang University can be found here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
+<p><span class="style11"> My official university web page in Chinese is here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
 </span>
 
 </div>
@@ -267,7 +263,7 @@ p{ margin:10px auto}
 	<p><span class="style11">&bull; <strong>Enhanced deep learning systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
 		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
 		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>], 
-		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>], etc. </span></p>
+		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>], etc. </span></p>
 </div>
 
 
@@ -360,6 +356,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11"> <strong> Ongoing </strong> </span></p>
 
+<p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
+
 <p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
 
 <p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
@@ -410,7 +408,9 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
-<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23 </span></p>
+<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23, IJCAI'24 </span></p>
 </div>
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 
@@ -418,7 +418,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Mingming Zhang, Yuxuan Chen, Yuezheng Liu (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
-<p><span class="style11">&bull; [Part Time] Yao Zhang, Xiaoyu Liu, Qi Wang, Lu Pei</span></p>
+<p><span class="style11">&bull; [Part Time]  Yao Zhang, Xiaoyu Liu, Tianyou Zeng, Lu Pei, Jiasheng Liu, Zhiqi Zhang, Haiyang Tang </span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
