--- a/news.html
+++ b/news.html
@@ -76,6 +76,14 @@ p{ margin:10px auto}
 <body>
 <p><span class="Bolder">Events</span></p>
 
+<p><span class="style11"> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
+
+<p><span class="style11"> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
+
+<p><span class="style11"> (21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
+
+<p><span class="style11"> (25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
+
 <p><span class="style11">(20/10/2022) Our work on Reinforced Self-supervised GNN Architecture Search is accepted by ACM Trans. on the Web. Congrats to Yingguang! </span></p>
 
 <p><span class="style11">(23/08/2022) Our work on QoS-Aware Co-Scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems. Big congrats to Jianyong and Xiaoyang! </span></p>
