--- a/publications.html
+++ b/publications.html
@@ -110,7 +110,7 @@ p{ margin:10px auto}
 <hr style="width:100%;text-align:left;margin-left:0">
 
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information. </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. ' = co-first authors with equal contribution by alphabetical order. # =  authors in alphabetical order </span> &nbsp; &nbsp;</p>
 
 
 
@@ -123,6 +123,24 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE)
 <a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	
+
+<p><span class="style11">&bull; L. He, Y. Yang, Q. Wu, H. Liu, R. Yang, X. Wang, H. Peng, Y. Liao, P. Zhou. BotDGT: Dynamicity-aware Social Network Bot Detection with Dynamic Graph Transformers. The 33rd International Joint Conference on Artificial Intelligence (IJCAI)
+<a href="paper/ijcai2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
+
+<p><span class="style11">&bull; S. Kumar, R. Yang, R. Singh, R. Bahsoon, J. Xu, R. Buyya.  MatchCom: Stable Matching-Based Software Services Composition in Cloud Computing Environments. The 24th International Conference on Web Engineering (ICWE) 
+<a href="paper/icwe2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
+
+<p><span class="style11">&bull; N. V. Shakhlevich, T. Erlebach, C. Mommessin, R. Yang, X. Sun, S. Kumar, J. Xiao, J. Xu. Vector Bin Packing for Resource Management in Distributed Systems: A Case Study. The 19th International Workshop on Project Management and Scheduling (PMS). The Association of European Operational Research Societies. 
+<a href="paper/pms2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
+
+<p><span class="style11">&bull; T. Erlebach#, S. Kumar, C. Mommessin, N. V. Shakhlevich, X. Sun, J. Xiao, J. Xu, R. Yang#. Affinity Aware Scheduling in Distributed Computing via Vector Bin Packing. The 33rd European Conference on Operational Research (EURO 2024 Copenhagen).  
+<a href="paper/euro2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
+
+ 
 
 
 <p lang="en-US"><span class="blue">2023</span></p>
