--- a/services.html
+++ b/services.html
@@ -101,6 +101,7 @@ p{ margin:10px auto}
 
 
 <p><span class="style11"><strong> (Co-) Chair/Editor:</strong></span></p>
+<p><span class="style11">&bull; Associate Editor of ACM Computing Surveys (CSUR), 2024-present </span></p>
 <p><span class="style11">&bull; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal, 2021.10 - present </span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690)
 <p><span class="style11">&bull;  Review Editor on the Editorial Board of Frontiers in Big Data, 2021.12 - present </span></p>
@@ -121,6 +122,8 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; IEEE HPCC'22-now </span></p>
 <p><span class="style11">&bull; IJCAI'21-now </span></p>
 <p><span class="style11">&bull; AAAI'22-now </span></p>
+<p><span class="style11">&bull; BigCom'24-now </span></p>
+
 
 
 <p><span class="style11"><strong> Conferences Organizer: </strong></span></p>
@@ -134,7 +137,7 @@ p{ margin:10px auto}
 
  
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p><span class="style11">Updated by Dec 2022 </span> &nbsp; &nbsp;</p>
+<p><span class="style11">Updated by April 2024 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
