--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ p{ margin:10px auto}
 <p class="STYLE17">&nbsp;Associate Professor, <a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
 <p class="STYLE17">&nbsp;Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab)</p>
 
-<p class="style11">&nbsp;<strong>Office</strong>:&nbsp; Room 6.31 Zeng Xian-Zi Building or Room G513 New Main Building &nbsp;</p>
+<p class="style11">&nbsp;<strong>Office</strong>:&nbsp; D306 New Main Building &nbsp;</p>
 
-<p class="style11">&nbsp;<strong>Address</strong>:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
+<p class="style11">&nbsp;<strong>Location</strong>:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
 <p class="style11">&nbsp;<strong>Email</strong>: &nbsp; {renyuyang, renyu.yang} AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;<strong>Links</strong>: &nbsp; 
