--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ p{ margin:10px auto}
 
 <!--p><span class="style11">~$ pub -rl</span></p--> 
 
-<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE ICDE 2024 <span class="red">(CCF A)</span> </span></p>
+<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. <a href="paper/icde2024.pdf" style="text-decoration: none">LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy</a>. IEEE ICDE 2024 <span class="red">(CCF A)</span> </span></p>
 
 <p><span class="style11">&bull; Z. Wen, R. Yang, B. Qian, Z. Wang, H. Peng, J. Xu, A.Y. Zomaya, R. Ranjan. <a href="paper/tsc2023.pdf" style="text-decoration: none">Janus: Latency-Aware Traffic Scheduling for IoT Data Streaming in Edge Environments</a>. IEEE TSC 2023 <span class="red">(CCF A)</span> </span></p>
 
