--- a/publications.html
+++ b/publications.html
@@ -140,7 +140,9 @@ p{ margin:10px auto}
 <a href="paper/euro2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	
 
- 
+<p><span class="style11">&bull; B. Qian, Y. Xuan, D. Wu, Z. Wen, R. Yang, S. He, J. Chen, and R. Ranjan. Edge-Cloud Collaborative Streaming Video Analytics with Multi-agent Deep Reinforcement Learning. IEEE Network 
+<a href="paper/network2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
 
 
 <p lang="en-US"><span class="blue">2023</span></p>
