--- a/publications_topics.html
+++ b/publications_topics.html
@@ -274,6 +274,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
 
+<p><span class="style11">&bull; B. Qian, Y. Xuan, D. Wu, Z. Wen, R. Yang, S. He, J. Chen, and R. Ranjan. Edge-Cloud Collaborative Streaming Video Analytics with Multi-agent Deep Reinforcement Learning. IEEE Network. 2024 
+	<a href="paper/network2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+	</span></p>	 
+
 <p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Unleashing the Potential of Acquisition Functions in High Dimensional Bayesian Optimization. Transactions on Machine Learning Research (TMLR), 2024 <a href="paper/tmlr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection. ACM WWW 2023 <a href="paper/www2023-fedack.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
