--- a/publications.html
+++ b/publications.html
@@ -114,11 +114,11 @@ p{ margin:10px auto}
 
 
 
-
-
 <p lang="en-US"><span class="blue">2024</span></p>
 
-<p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Unleashing the Potential of Acquisition Functions in High Dimensional Bayesian Optimization. Transactions on Machine Learning Research (TMLR) <a href="paper/tmlr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+<p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) <a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+
+<p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) <a href="paper/kdd2024-sebot.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE)
 <a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
@@ -127,6 +127,8 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; L. He, Y. Yang, Q. Wu, H. Liu, R. Yang, X. Wang, H. Peng, Y. Liao, P. Zhou. BotDGT: Dynamicity-aware Social Network Bot Detection with Dynamic Graph Transformers. The 33rd International Joint Conference on Artificial Intelligence (IJCAI)
 <a href="paper/ijcai2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	
+
+<p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Unleashing the Potential of Acquisition Functions in High Dimensional Bayesian Optimization. Transactions on Machine Learning Research (TMLR) <a href="paper/tmlr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; S. Kumar, R. Yang, R. Singh, R. Bahsoon, J. Xu, R. Buyya.  MatchCom: Stable Matching-Based Software Services Composition in Cloud Computing Environments. The 24th International Conference on Web Engineering (ICWE) 
 <a href="paper/icwe2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
