--- a/publications_topics.html
+++ b/publications_topics.html
@@ -223,13 +223,18 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="blue"> System Dependability </span></p>
 
+
+<p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024
+<a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
+</span></p>
+
 <p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE), 2024
-	<a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
-	</span></p>	
+<a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
 
 <p><span class="style11">&bull; L. He, Y. Yang, Q. Wu, H. Liu, R. Yang, X. Wang, H. Peng, Y. Liao, P. Zhou. BotDGT: Dynamicity-aware Social Network Bot Detection with Dynamic Graph Transformers. The 33rd International Joint Conference on Artificial Intelligence (IJCAI), 2024
-	<a href="paper/ijcai2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
-	</span></p>	
+<a href="paper/ijcai2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. BISSIAM: Bispectrum Siamese Network Based
 	Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -273,6 +278,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 
 <p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
+
+<p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024 <a href="paper/kdd2024-sebot.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; B. Qian, Y. Xuan, D. Wu, Z. Wen, R. Yang, S. He, J. Chen, and R. Ranjan. Edge-Cloud Collaborative Streaming Video Analytics with Multi-agent Deep Reinforcement Learning. IEEE Network. 2024 
 	<a href="paper/network2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
