--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> (17/05/2024) Two papers are accepted by ACM KDD 2024. Big congrats to Rui, Xudong and Yingguang! </span></p>
+
 <p><span class="style11"> (16/04/2024) Our work on Dynamic Graph Transformers for Bot Detection is accepted by IJCAI 2024. </span></p>
 
 <p><span class="style11"> (08/12/2023) Our work on Recovering from Poisoning Attacks is accepted by ICDE 2024. </span></p>
@@ -229,7 +231,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~2,600 citations, h-index=24, by April. 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
-	VLDB, ICDE, WWW, SC, ICDCS, DSN, SoCC, SECON, IJCAI, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
+	VLDB, ICDE, WWW, KDD, SC, ICDCS, DSN, SoCC, SECON, IJCAI, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
@@ -255,15 +257,15 @@ p{ margin:10px auto}
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems (cloud computing, big data, deep learning, IoT, etc.) at scale. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Improved resource efficiency of large-scale datacenters:</strong>
 		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>], 
+		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
 		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Improved system dependability:</strong>
 		fault tolerance and failover [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>], 
 		long-tail task mitigation [<a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>], 
 		and poisoning attacks modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>], etc.</span></p> 
 	<p><span class="style11">&bull; <strong>Enhanced deep learning systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
-		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
-		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>], 
-		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>], etc. </span></p>
+		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], 
+		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>], etc. </span></p>
 </div>
 
 
@@ -304,8 +306,9 @@ p{ margin:10px auto}
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
 
+<p><span class="style11">&bull; R. Wang, X. Mou, R. Yang, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
-<!--p><span class="style11">~$ pub -rl</span></p--> 
+<p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. <a href="paper/icde2024.pdf" style="text-decoration: none">LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy</a>. IEEE ICDE 2024 <span class="red">(CCF A)</span> </span></p>
 
@@ -410,7 +413,8 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23, IJCAI'24 </span></p>
+<p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24 </span></p> 
+<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23, IJCAI'24, KDD'24 </span></p>
 </div>
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 
