--- a/alumni.html
+++ b/alumni.html
@@ -120,19 +120,19 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 
 <p><span class="style11"><strong> Former MSc. Students (by Research) @BeihangU </strong></span></p> 
-
-<p><span class="style11">&bull; Pexi Li (2021.9-2023.12, first employment at ByteDance)</span></p> 
-<p><span class="style11">&bull; Kuoran Zhuang (2021.9-2023.12, first employment at a Quant Fund Company)</span></p> 
-<p><span class="style11">&bull; Shiqing Xue (2018.9-2020.12, first employment at Tecent)</span></p> 
-<p><span class="style11">&bull; Junqing Xiao (2016.9-2018.12, first employment at Alibaba)</span></p> 
-<p><span class="style11">&bull; Ximing Qu (2016.9-2018.12, first employment at Alibaba)</span></p> 
-<p><span class="style11">&bull; Xiaoyang Sun (2015.9-2018.3, PhD student at UoLeeds UK) </span></p> 
-<p><span class="style11">&bull; Lian Du (2015.9-2018.3, first employment at Alibaba)</span></p> 
-<p><span class="style11">&bull; Hailun Wang (2015.9-2017.3, first employment at Baidu)  </span></p> 
-<p><span class="style11">&bull; Xixu Wang (2014.9-2017.3, first employment at Baidu)</span></p> 
-<p><span class="style11">&bull; Wenbo Jiang (2013.9-2016.3, first employment at NetEase Inc.)</span></p> 
-<p><span class="style11">&bull; Yunchang Zhao (2013.9-2016.3, first employment at an Internet startup)</span></p> 
-<p><span class="style11">&bull; Yuda Wang (2012.9-2015.3, first employment at China Telecom.) </span></p> 
+<p><span class="style11">&bull; Tao Yan (2021.9-2023.12, co-supervised w/ Prof. Tianyu Wo, first employment at Alibaba) </span></p>
+<p><span class="style11">&bull; Pexi Li (2021.9-2023.12, co-supervised w/ Prof. Chunming Hu, first employment at ByteDance)</span></p> 
+<p><span class="style11">&bull; Kuoran Zhuang (2021.9-2023.12, co-supervised w/ Prof. Tianyu Wo, first employment at a Quant Fund Company)</span></p> 
+<p><span class="style11">&bull; Shiqing Xue (2018.9-2020.12, co-supervised w/ Prof. Chunming Hu, first employment at Tecent)</span></p> 
+<p><span class="style11">&bull; Junqing Xiao (2016.9-2018.12, co-supervised w/ Prof. Chunming Hu, first employment at Alibaba)</span></p> 
+<p><span class="style11">&bull; Ximing Qu (2016.9-2018.12, co-supervised w/ Prof. Chunming Hu, first employment at Alibaba)</span></p> 
+<p><span class="style11">&bull; Xiaoyang Sun (2015.9-2018.3, co-supervised w/ Prof. Chunming Hu, PhD student at UoLeeds UK) </span></p> 
+<p><span class="style11">&bull; Lian Du (2015.9-2018.3, co-supervised w/ Prof. Tianyu Wo, first employment at Alibaba)</span></p> 
+<p><span class="style11">&bull; Hailun Wang (2015.9-2017.3, co-supervised w/ Prof. Jie Xu, first employment at Baidu)  </span></p> 
+<p><span class="style11">&bull; Xixu Wang (2014.9-2017.3, co-supervised w/ Prof. Chunming Hu, first employment at Baidu)</span></p> 
+<p><span class="style11">&bull; Wenbo Jiang (2013.9-2016.3, co-supervised w/ Prof. Jie Xu, first employment at NetEase Inc.)</span></p> 
+<p><span class="style11">&bull; Yunchang Zhao (2013.9-2016.3, co-supervised w/ Prof. Chunming Hu, first employment at an Internet startup)</span></p> 
+<p><span class="style11">&bull; Yuda Wang (2012.9-2015.3, co-supervised w/ Prof. Jinpeng Huai, first employment at China Telecom.) </span></p> 
 
 
 <p><span class="style11"><strong> Former MSc. Students @UoLeeds </strong></span></p> 
@@ -140,7 +140,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 <p><span class="style11">&bull; Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, UoLeeds, with Prof. Jie Xu) </span></p> 
 <p><span class="style11">&bull; Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, UoLeeds) </span></p>
 <p><span class="style11">&bull; Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, UoLeeds) </span></p>
-    <p><span class="style11">&bull; Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, UoLeeds) </span></p>
+<p><span class="style11">&bull; Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, UoLeeds) </span></p>
 
 
 <p><span class="style11"><strong> Former BSc. Students @UoLeeds and @BeihangU </strong></span></p> 
