--- a/index.html
+++ b/index.html
@@ -254,16 +254,16 @@ p{ margin:10px auto}
 <div id="div_interest">
 
 <p><span class="Bolder"><!--img src="icons/research-banner.png" width="25" height="25" border="0"/--> Research Interests</span></p>
-<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems (cloud computing, big data, deep learning, IoT, etc.) at scale. My research mainly focuses on: </span></p>
-	<p><span class="style11">&bull; <strong>Improved resource efficiency of large-scale datacenters:</strong>
+<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems at scale such as cloud computing, big data, deep learning training/inference, IoT, etc. My research mainly focuses on: </span></p>
+	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
 		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>], 
 		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
 		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
-	<p><span class="style11">&bull; <strong>Improved system dependability:</strong>
+	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
 		fault tolerance and failover [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>], 
 		long-tail task mitigation [<a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>], 
 		and poisoning attacks modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>], etc.</span></p> 
-	<p><span class="style11">&bull; <strong>Enhanced deep learning systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
+	<p><span class="style11">&bull; <strong>Enhanced intelligent systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
 		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], 
 		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>], etc. </span></p>
 </div>
@@ -407,18 +407,18 @@ I had the opportunity to work closely with many institutes around the world and 
 
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
+<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24 </span></p> 
 <p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
-<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24 </span></p> 
 <p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23, IJCAI'24, KDD'24 </span></p>
 </div>
-<p><span class="style11"><strong>MSc Students</strong> </span></p>
 
-<p><span class="style11">&bull; [Class 2021] Tao Yan (co-supervised w/ Prof. Tianyu Wo) </span></p>
+<p><span class="style11"><strong>MSc Students</strong> </span></p>
 <p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Mingming Zhang, Yuxuan Chen, Yuezheng Liu (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
