--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@ p{ margin:10px auto}
 	that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of 
 	data center efficiency and intelligence. Prior to this, I was a research scientist and lead project manager with the
 	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
-	Beijing, China.  When I was a PhD student, I was also with Alibaba Group (2014-2016), participating in the 
+	Beijing, China. When I was a PhD student, I was also with Alibaba Group (2014-2016), participating in the 
 	development and research on intelligent resource scheduling and performance optimization at Internet scale. 
 	My research interests include large-scale dependable distributed systems, trustworthy data-centric engineering, 
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
 <p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~2,600 citations, h-index=24, by April. 2024), 
-	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
-	VLDB, ICDE, WWW, KDD, SC, ICDCS, DSN, SoCC, SECON, IJCAI, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
+	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
+	VLDB, ICDE, WWW, KDD, SC, ICDCS, DSN, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
@@ -256,16 +256,15 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/research-banner.png" width="25" height="25" border="0"/--> Research Interests</span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems at scale such as cloud computing, big data, deep learning training/inference, IoT, etc. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
-		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>], 
-		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
+		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>], 
+		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
 		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
-		fault tolerance and failover [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>], 
-		long-tail task mitigation [<a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>], 
-		and poisoning attacks modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>], etc.</span></p> 
+		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
+		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>]
+		and dependability modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>], etc.</span></p> 
 	<p><span class="style11">&bull; <strong>Enhanced intelligent systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
-		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], 
-		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>], etc. </span></p>
+		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], etc. </span></p>
 </div>
 
 
@@ -432,13 +431,15 @@ I had the opportunity to work closely with many institutes around the world and 
 
 
 <p><span class="Bolder"><!--img src="icons/presentation-banner.png" width="25" height="25" border="0"/--> Teaching and Presentations </span></p>
+<!--p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), [Spring 2024] </span></p-->
  
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), [Spring 2024] </span></p>
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foudations of Cloud Computing (Undergraduate Level, BeihangU), [Spring 2024] </span></p>
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Software Engineering (Undergraduate Level, BeihangU), [Spring 2024] </span></p>
-<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), [Autumn 2023] </span></p>
-<p><span class="style11">&bull; Foundations of Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">[Autumn 2023]</a></span></p> 
-<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022</span></p> 
+
+<p><span class="style11">&bull; Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), Spring 2024 </span></p>
+<p><span class="style11">&bull; Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024 </span></p>
+<p><span class="style11">&bull; Foudations of Software Engineering (Undergraduate Level, BeihangU), Spring 2024 </span></p>
+<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023/2024 </span></p>
+<p><span class="style11">&bull; Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">Autumn 2023</a>, Autumn 2024</span></p> 
+<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022 </span></p> 
 <p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
 
@@ -468,7 +469,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull;	  <strong>UK Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
 
-<p><span class="style11">&bull;   <strong>Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
+<p><span class="style11">&bull;   <strong>IEEE Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
 <p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&bull;   The State Scientific and Technological Progress Award, 1st Prize Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
